--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -9,11 +9,37 @@
 .side-bar-header {
   height: 100px;
   padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.user-name a {
+  color: #FAFAFA;
+  font-size: 16px;
+  text-decoration: none;
+}
+.create-room {
+  font-size: 10px;
+}
+.create-room a {
+  padding: 14px;
+  border: 1px solid lightblue;
+  color: deepskyblue;
+  text-decoration: none;
 }
 .rooms {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
+}
+.room {
+  padding: 20px 0px 40px;
+}
+.room a {
+  color: white;
+  text-decoration: none;
 }
 .main-chat {
   background-color: #ffffff;
