--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="side-bar-header">
-  <div class="user-name">
+  <div class="header-name">
     <a href="#">Tom</a>
   </div>
   <div class="create-room">
@@ -16,6 +16,5 @@
     <div class="room-name">
       <a href="#">techroom2</a>
     </div>
-  </div>
   </div>
 </div>
