--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -149,6 +149,7 @@
   background-color: lightblue;
   color: white;
   padding: 12px;
+  width: 60px;
   margin: 5px 10px;
   text-align: center;
 }
